--- a/css/tailwind.scss
+++ b/css/tailwind.scss
@@ -17,3 +17,27 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     @apply text-5xl mb-6 ml-1;
 }
+
+
+/*
+========================================
+Navigation
+======================================== */
+#nav-main {
+    @apply py-4 px-8 w-full bg-white shadow border-b-2;
+    & a {
+        padding-bottom: 2px;
+    }
+}
+@media (min-width: 640px) {
+    #nav-main {
+        @apply mb-10;
+        & ul {
+            @apply flex;
+            & li {
+                @apply py-1 mr-12;
+                margin-top: 2px;
+            }
+        }
+    }
+}
