split CSS for faster compile; add new styles

--- a/css/tailwind.scss
+++ b/css/tailwind.scss
@@ -4,57 +4,4 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-
-* {
-    font-family: "Open Sans", sans-serif;
-}
-body {
-    @apply bg-beige;
-}
-main {
-    @apply py-8 px-12 shadow bg-white mx-12;
-}
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Texturina", serif;
-}
-h1 {
-    @apply text-5xl mb-6 ml-1;
-}
-
-
-/*
-========================================
-Navigation
-======================================== */
-#nav-main {
-    @apply py-4 px-8 w-full bg-white shadow border-b-2;
-    & a {
-        padding-bottom: 2px;
-    }
-}
-@media (min-width: 640px) {
-    #nav-main {
-        @apply mb-10;
-        & ul {
-            @apply flex;
-            & li {
-                @apply py-1 mr-12;
-                margin-top: 2px;
-            }
-        }
-    }
-}
-
-
-/*
-========================================
-Footer
-======================================== */
-footer {
-    @apply text-white text-center pb-16 pt-10 px-8 w-full bg-black mt-20;
-    a {
-        @apply underline;
-    }
-}
-
-
+//@import "custom";
