--- a/css/custom.scss
+++ b/css/custom.scss
@@ -4,16 +4,17 @@
 body {
     @apply bg-beige;
 }
-main {
-    max-width: 800px;
-    margin: 0 auto;
-    @apply py-8 px-12 shadow bg-white mx-12 mt-20;
-}
 h1, h2, h3, h4, h5, h6 {
     font-family: "Texturina", serif;
 }
 h1 {
     @apply text-5xl mb-6 ml-1;
+}
+h2 {
+    @apply text-3xl mb-6;
+}
+p {
+    @apply mb-3;
 }
 
 
@@ -29,7 +30,6 @@ Navigation
 }
 @media (min-width: 640px) {
     #nav-main {
-        @apply mb-10;
         & ul {
             @apply flex;
             & li {
@@ -55,8 +55,122 @@ footer {
 
 /*
 ========================================
+Section Types
+======================================== */
+.hero,
+.main,
+.full-content {
+    @apply py-8 px-12;
+}
+.hero,
+.full {
+    @apply bg-cover bg-fixed bg-center;
+}
+.hero {
+    @apply h-screen w-full;
+    .hero-overlay {
+        background: rgba(171, 63, 71, 0.7);
+        @apply -my-8 -mx-12 h-screen;
+    }
+    h1 {
+        @apply text-white text-center text-8xl pt-64 px-12;
+    }
+}
+.full {
+    min-height: 400px;
+    @apply flex my-0 py-12;
+    .full-image {
+        @apply bg-cover bg-center;
+    }
+    .full-content {
+        @apply flex w-full;
+        margin: 0 auto;
+        .content {
+            @apply self-center;
+        }
+    }
+}
+@screen lg {
+    .full {
+        @apply py-24;
+        .full-content {
+            @apply w-9/12;
+        }
+    }
+}
+.main {
+    max-width: 800px;
+    margin: 0 auto;
+    @apply shadow bg-white mt-20;
+}
+@media (max-width: 768px) {
+    .hero {
+        h1 {
+            @apply text-6xl;
+        }
+    }
+    .main {
+        @apply mx-12;
+    }
+}
+
+
+/*
+========================================
 Page Components
 ======================================== */
 .blurb {
     @apply py-4 px-6 my-2 border-maroon border-2 rounded bg-beige;
 }
+
+
+/*
+========================================
+AniJS Animations
+======================================== */
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+.animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+.animated.hinge {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+}
+/*the animation definition*/
+@-webkit-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none
+    }
+}
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        -ms-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none
+    }
+}
+.fadeInLeft {
+    -webkit-animation-name: fadeInLeft;
+    animation-name: fadeInLeft
+}
+  
